--- a/templates/end.html
+++ b/templates/end.html
@@ -3,7 +3,7 @@
 <table class="pause">
     <thead>
         <tr>
-            <th class="winner">{% block title %} Gewinner des 2. MUSIKQUIZ 2024{% endblock %}</th>
+            <th class="winner">{% block title %} Gewinner des 1. FeuerwehrQUIZ 2024{% endblock %}</th>
         </tr>
     </thead>
 <tbody>
