--- a/templates/index0.html
+++ b/templates/index0.html
@@ -3,8 +3,9 @@
 <table>
 <thead>
     <tr><th class="roundname">{% block title %} {{points['round_name']}} {% endblock %}</th></tr>
-    <tr><td class="lastsong">letzter song:</td></tr>
-    <tr><th class="lastsong">{{last_song.get("title","-")}} - {{last_song.get("artist","-")}} ({{last_song.get("year","-")}})</th></tr>
+    <tr><td class="lastsong">letzter Frage:</td></tr>
+    <tr><th class="lastsong">{{last_question.get("question","-")}}</th></tr>
+    <tr><th class="lastsong">{{last_question.get("answer","-")}}</th></tr>
 </thead>
 
 <tbody>
