--- a/templates/start.html
+++ b/templates/start.html
@@ -4,7 +4,7 @@
     <thead>
         <tr>
             <th class="countdown">
-                <p>MusikQuiz 2024{% block title %} {% endblock %}</p>
+                <p>Bennys Quiz{% block title %} {% endblock %}</p>
             </th>
         </tr>
     </thead>
