--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" http-equiv="refresh" content="1">
   <title>{% block title %} {% endblock %} </title>
-<link rel="stylesheet" type="text/css" href="{{ url_for('/home/benny/Dokumente/quiz_local/quiz/static', filename='/css/style.css') }}">
+  <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/style.css') }}"> -->
+<link rel="stylesheet" type="text/css" href="home/benny/Dokumente/quiz_local/quiz/static/css/style.css">
 </head>
 
 <body>
