--- a/templates/index2.html
+++ b/templates/index2.html
@@ -3,7 +3,7 @@
 <table>
 <thead>
     <tr><th class="roundname">{% block title %} {{points['round_name']}} {% endblock %}</th></tr>
-    <tr><td class="lastsong">letzter Frage:</td></tr>
+    <tr><td class="lastsong">letzte Frage:</td></tr>
     <tr><th class="lastsong">{{last_question.get("question","-")}}</th></tr>
     <tr><th class="lastsong">{{last_question.get("answer","-")}}</th></tr>
 </thead>
