--- a/templates/end.html
+++ b/templates/end.html
@@ -8,7 +8,7 @@
     </thead>
 <tbody>
     <tr>
-        <td class="winner">𝅘𝅥𝅮   {{player_name}}   𝅘𝅥𝅰</td>
+        <td class="winner">🔥   {{player_name}}   🔥</td>
     </tr>
 </tbody>
 </table>
