--- a/templates/pause.html
+++ b/templates/pause.html
@@ -1,11 +1,17 @@
-{% extends 'base.html' %}
-{% block content %}
+<html>
+<head>
+  <meta charset="UTF-8" http-equiv="refresh" content="1">
+  <title>Musikquiz</title>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
 <table class="countdown">
     <thead>
-        <tr><th class="pause">{% block title %} PAUSE {% endblock %}</th></tr>
+        <tr><th class="pause">PAUSE</th></tr>
     </thead>
     <tbody>
         <tr><td class="pause">Bitte denken Sie daran ausreichend Bier zu trinken !</td></tr>
     </tbody>
 </table>
-{% endblock %}
+</body>
+</html>
