--- a/templates/index4.html
+++ b/templates/index4.html
@@ -8,8 +8,8 @@
 <table>
 <thead>
     <tr><th class="roundname">{{points['round_name']}}</th></tr>
-    <tr><td class="lastsong">letzter song:</td></tr>
-    <tr><th class="lastsong">{{last_song.get("title","-")}} - {{last_song.get("artist","-")}} ({{last_song.get("year","-")}})</th></tr>
+    <tr><td class="lastsong">letzte Frage:</td></tr>
+    <tr><th class="lastsong">{{last_question.get("question","-")}} - {{last_question.get("answer","-")}}</th></tr>
 </thead>
 
 <tbody>
