--- a/templates/start.html
+++ b/templates/start.html
@@ -9,7 +9,7 @@
     <thead>
         <tr>
             <th class="countdown">
-                <p>MusikQuiz 2024</p>
+                <p>Quiz</p>
             </th>
         </tr>
     </thead>
