--- a/templates/image.html
+++ b/templates/image.html
@@ -14,7 +14,7 @@
     </thead>
     <tbody>
         <tr>
-            <td class="last_song"><img src="{{ url_for('static', filename='cover/{}'.format(image)) }}" alt="Cover" style="width: 800px; height: 800px;"></img> &nbsp
+            <td class="last_song"><img src="{{ url_for('static', filename='cover/{}'.format(image)) }}" alt="Cover" style="height: 800px;"></img> &nbsp
             </td>
         </tr>
         <tr>
